Add `module-info`