@@ -65,7 +65,7 @@
 
         <jdk.min.version>11</jdk.min.version>
 
-        <version.jboss.logging.tools>3.0.0.Final</version.jboss.logging.tools>
+        <version.jboss.logging.tools>3.0.1.Final</version.jboss.logging.tools>
     </properties>
 
     <dependencyManagement>
@@ -97,12 +97,6 @@
         <dependency>
             <groupId>org.jboss.logging</groupId>
             <artifactId>jboss-logging-annotations</artifactId>
-            <version>${version.jboss.logging.tools}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.logging</groupId>
-            <artifactId>jboss-logging-processor</artifactId>
             <version>${version.jboss.logging.tools}</version>
             <scope>provided</scope>
         </dependency>
@@ -189,7 +183,17 @@
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <proc>full</proc>
+                    <annotationProcessorPaths>
+                        <annotationProcessorPath>
+                            <groupId>org.jboss.logging</groupId>
+                            <artifactId>jboss-logging-processor</artifactId>
+                            <version>${version.jboss.logging.tools}</version>
+                        </annotationProcessorPath>
+                    </annotationProcessorPaths>
+                    <compilerArgs>
+                        <!-- This is for SVM dependency -->
+                        <compilerArg>--add-reads=org.jboss.threads=ALL-UNNAMED</compilerArg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -205,6 +209,7 @@
                         <jboss.threads.eqe.unlimited-queue>${jboss.threads.eqe.unlimited-queue}</jboss.threads.eqe.unlimited-queue>
                         <jboss.threads.eqe.register-mbean>${jboss.threads.eqe.register-mbean}</jboss.threads.eqe.register-mbean>
                     </systemPropertyVariables>
+                    <useModulePath>true</useModulePath>
                 </configuration>
             </plugin>
         </plugins>
